--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rollup-webmap-kickstart",
+  "name": "rollup-spectre-project",
   "devDependencies": {
     "autoprefixer": "^9.6.1",
     "node-sass": "^4.12.0",
