--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rollup-spectre-project",
   "devDependencies": {
-    "autoprefixer": "^9.6.1",
-    "node-sass": "^4.12.0",
+    "autoprefixer": "latest",
+    "node-sass": "latest",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.16.2",
     "rollup-plugin-commonjs": "^10.0.0",
