--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "rollup": "^1.16.2",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-node-resolve": "^5.1.0",
-    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-postcss": "latest",
     "rollup-plugin-terser": "^5.0.0",
     "serve": "^11.0.2"
   },
